# optscale-docker

./: .dockerignore  .env.example  .gitignore  MIGRATION_README.md  Makefile  README.md  build.sh  docker-compose.yml  nginx.conf  uv_lock.sh
auth/: Dockerfile  Dockerfile_tests  pyproject.toml  run_test.sh
auth/auth_server/: constants.py  exceptions.py  server.py  utils.py
auth/auth_server/auth_token/: token_store.py
auth/auth_server/controllers/: action.py  assignment.py  authorization_userlist.py  base.py  role.py  scope.py  signin.py  token.py  user.py  user_option.py  verification_code.py
auth/auth_server/models/: models.py
bi_exporter/: Dockerfile  Dockerfile_tests  pyproject.toml  run_test.sh
bi_exporter/bumblebi/exporter/: exporter.py  main.py  requirements.txt
bi_exporter/bumblebi/tests/: test_worker.py
bumischeduler/: Dockerfile  Dockerfile_tests  pyproject.toml  run_test.sh
bumischeduler/bumischeduler/controllers/: schedule.py
diproxy/: Dockerfile  Dockerfile_tests  pyproject.toml  run_test.sh
diworker/: Dockerfile  Dockerfile_tests  pyproject.toml  run_test.sh
diworker/diworker/: main.py  migrator.py  regenerator.py
diworker/diworker/importers/: alibaba.py  aws.py  azure.py  azure_export.py  base.py  databricks.py  environment.py  factory.py  gcp.py  kubernetes.py  nebius.py
diworker/diworker/migrations/: 20200825160000_azure_raw_updates.py  202110200930000_first_last_expenses_in_grouped_collections.py  202111031530000_clickhouse_database.py  202112081330000_move_expenses_clickhouse.py  202201281445000_expense_info_in_resources.py  202204201635000_traffic_expenses_table.py  2022061711400000_traffic_expenses_region_fix_aws.py  2022070516350000_rework_traffic_expenses.py  2022112611000000_created_at_for_aws_expenses.py  2023040412300000_sp_ri_expenses.py  2023112915300000_resource_dates.py  2024102814000000_azure_service_name_lower.py  2024111309000000_gcp_image_resource_type.py  2024112613490000_gcp_fix_resource_type.py  20250128815350000_aws_ip_address_fix_resource_type.py  20250324074000000_fix_azure_load_balancer_resource.py  20250325716320000_fix_aws_load_balancer.py  20250417711050000_fix_alibaba_load_balancer.py  20250602090000000_marketplace_purchase_resource.py
herald/: Dockerfile  Dockerfile_tests  email_test_data.py  pyproject.toml  render_samples.py  run.py  run_test.sh  send_templates.py
herald/herald_server/: constants.py  exceptions.py  migrate.py  server.py  utils.py
herald/herald_server/alembic/: env.py
herald/herald_server/controllers/: base.py  base_async.py  email.py  message_consumer.py  message_publisher.py  notification.py  reaction.py
herald/herald_server/models/: db_base.py  db_factory.py  db_mysql.py  db_test.py  migrator.py  models.py  types.py
herald/herald_server/processors/: base.py  email.py  factory.py  main.py  sms.py
herald/herald_server/worker/: worker.py
herald/modules/email_generator/: CUSTOM_EMAIL_README.md  context_generator.py  generator.py  utils.py
herald/modules/email_sender/: sender.py
herald/modules/tests/: conftest.py
insider/insider_scheduler/: Dockerfile  pyproject.toml
insider/insider_worker/: Dockerfile  main.py  migrator.py  pyproject.toml
insider/insider_worker/migrations/: 20250918091530_architectures_index.py
insider/insider_worker/processors/: azure.py
jira_bus/: Dockerfile  Dockerfile_tests  pyproject.toml  run_test.sh
jira_bus/jira_bus_server/atlassian_client/: client.py
jira_bus/jira_bus_server/controllers/: issue_attachment.py  organization_assignment.py  shareable_book.py  shareable_resource.py  user_assignment.py
jira_bus/jira_bus_server/models/: models.py
katara/katara_service/: Dockerfile  Dockerfile_tests  pyproject.toml  run_test.sh
katara/katara_service/controllers/: recipient.py  schedule.py  task.py
katara/katara_service/models/: models.py
katara/katara_worker/: Dockerfile  Dockerfile_tests  consts.py  main.py  pyproject.toml  run_test.sh  tasks.py  transitions.py
katara/katara_worker/reports_generators/: base.py  organization_expenses.py  pool_limit_exceed.py  pool_limit_exceed_resources.py  report.py  violated_constraints.py  violated_constraints_diff.py
keeper/: Dockerfile  Dockerfile_tests  pyproject.toml  run_test.sh
keeper/report_server/: server.py
keeper/report_server/controllers/: base.py  base_async.py  event.py  event_base.py  feedback.py
keeper/report_server/handlers/: base.py
metroculus/metroculus_api/: Dockerfile  pyproject.toml
metroculus/metroculus_api/controllers/: activity_breakdown.py  agr_metrics.py  base.py  k8s_metric.py  metrics.py
metroculus/metroculus_scheduler/: Dockerfile  main.py  pyproject.toml
metroculus/metroculus_worker/: Dockerfile  main.py  migrator.py  processor.py  pyproject.toml
metroculus/metroculus_worker/migrations/: V1__initial.py  V2__k8s_metrics.py  V3__k8s_metrics_date_partitioning.py  V4__average_metrics_date_partitioning.py  V5__support_lb_average_metrics.py  V6__modify_average_metrics_metric.py  V7__added_requests_metric.py  base.py
rest_api/: Dockerfile  Dockerfile_tests  live_demo.tar.xz  prepare_clickhouse_local.sh  pyproject.toml  run_test.sh
rest_api/rest_api_server/: constants.py  exceptions.py  otel_config.py  server.py  utils.py
rest_api/rest_api_server/controllers/: archived_recommendation.py  assignment.py  assignment_request.py  auth_hierarchy.py  available_filters.py  base.py  breakdown_expense.py  breakdown_meta.py  breakdown_tag.py  calendar_observer.py  calendar_synchronization.py  cloud_account.py  cluster_type.py  (+46 more)
risp/risp_scheduler/: Dockerfile  pyproject.toml  scheduler.py
risp/risp_worker/: Dockerfile  migrator.py  pyproject.toml  worker.py
slacker/: Dockerfile  Dockerfile_tests  pyproject.toml  run_test.sh
slacker/slacker_server/: exceptions.py  generate_slack_messages.py  slack_client.py  utils.py
subspector/: Dockerfile  Dockerfile_tests  migrate.py  pyproject.toml  run_test.sh
subspector/subspector_server/: producer.py  server.py  utils.py
trapper/trapper_worker/: Dockerfile  Dockerfile_tests  main.py  processor.py  pyproject.toml
(+2716 files in other folders)
