[project]
name = "auth"
version = "0.1.0"
requires-python = ">=3.12.11,<3.13"
dependencies = [
    "alembic==1.13.1",
    "apispec==6.3.1",
    "config-client",
    "cryptography==44.0.1",
    "google-auth==1.23.0",
    "mysql-connector-python==9.1.0",
    "optscale-exceptions",
    "optscale-password",
    "optscale-time",
    "ordered-set==4.1.0",
    "pyjwt>=2.4.0",
    "pymacaroons==0.9.2",
    "pyyaml==6.0.1",
    "requests==2.32.4",
    "restapi-client",
    "sqlalchemy==1.3.24",
    "tornado===6.5.5",
    "zcrmsdk==3.1.0",
]

[build-system]
requires = ["uv_build==0.8.15"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ".."
module-name = "auth"

[tool.uv.sources]
optscale-exceptions = { path = "../tools/optscale_exceptions" }
optscale-time = { path = "../tools/optscale_time" }
optscale-password = { path = "../tools/optscale_password" }
config-client = { path = "../optscale_client/config_client" }
restapi-client = { path = "../optscale_client/rest_api_client" }
auth-client = { path = "../optscale_client/auth_client" }
check-alembic-down-revisions = { path = "../tools/check_alembic_down_revisions" }

[dependency-groups]
dev = [
    "auth-client",
    "check-alembic-down-revisions",
    "coverage==4.2",
    "freezegun==0.3.8",
    "pycodestyle==2.11.1",
    "pylint==3.0.3",
]
