[project]
name = "bumischeduler"
version = "0.1.0"
requires-python = ">=3.12.11,<3.13"
dependencies = [
    "config-client",
    "kombu==5.5.4",
    "optscale-time",
    "restapi-client",
    "tornado===6.5.5",
]

[tool.uv.sources]
config-client = { path = "../optscale_client/config_client" }
restapi-client = { path = "../optscale_client/rest_api_client" }
optscale-time = { path = "../tools/optscale_time" }

[dependency-groups]
dev = [
    "coverage==4.2",
    "pycodestyle==2.11.1",
    "pylint==3.0.2",
]
[build-system]
requires = ["uv_build==0.8.15"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ".."
module-name = "bumischeduler"
