[project]
name = "keeper"
version = "0.1.0"
requires-python = ">=3.12.11,<3.13"
dependencies = [
    "apispec==6.3.1",
    "auth-client",
    "config-client",
    "mongoengine==0.27.0",
    "optscale-exceptions",
    "pymongo==4.6.3",
    "pyyaml==6.0.1",
    "requests==2.32.4",
    "tornado===6.5.5",
]

[tool.uv.sources]
config-client = { path = "../optscale_client/config_client" }
auth-client = { path = "../optscale_client/auth_client" }
optscale-exceptions = { path = "../tools/optscale_exceptions" }
report-client = { path = "../optscale_client/report_client" }

[dependency-groups]
dev = [
    "coverage==4.2",
    "mongomock==3.19.0",
    "pycodestyle==2.11.1",
    "pylint==3.0.2",
    "report-client",
    "setuptools==80.9.0",
]
[build-system]
requires = ["uv_build==0.8.15"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ".."
module-name = "keeper"
