[project]
name = "slacker"
version = "0.1.0"
requires-python = ">=3.12.11,<3.13"
dependencies = [
    "alembic==1.13.1",
    "apispec==6.3.1",
    "auth-client",
    "config-client",
    "currency-symbols==2.0.3",
    "mysql-connector-python==9.1.0",
    "optscale-exceptions",
    "optscale-time",
    "pyyaml==6.0.1",
    "restapi-client",
    "slack-bolt==1.18.1",
    "slack-sdk==3.27.1",
    "sqlalchemy==1.4.52",
    "tornado===6.5.5",
]

[tool.uv.sources]
optscale-exceptions = { path = "../tools/optscale_exceptions" }
optscale-time = { path = "../tools/optscale_time" }
auth-client = { path = "../optscale_client/auth_client" }
config-client = { path = "../optscale_client/config_client" }
restapi-client = { path = "../optscale_client/rest_api_client" }
slacker-client = { path = "../optscale_client/slacker_client" }
check-alembic-down-revisions = { path = "../tools/check_alembic_down_revisions" }

[dependency-groups]
dev = [
    "check-alembic-down-revisions",
    "coverage==4.2",
    "freezegun==0.3.8",
    "pycodestyle==2.11.1",
    "pylint==3.0.2",
    "pyyaml==6.0.1",
    "slacker-client",
]
[build-system]
requires = ["uv_build==0.8.15"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ".."
module-name = "slacker"
