[project]
name = "katara-service"
version = "0.1.0"
requires-python = ">=3.12.11,<3.13"
dependencies = [
    "alembic==1.13.1",
    "apispec==6.3.1",
    "auth-client",
    "config-client",
    "croniter==0.3.15",
    "kombu==5.5.4",
    "mysql-connector-python==9.1.0",
    "optscale-exceptions",
    "optscale-time",
    "pyyaml==6.0.1",
    "restapi-client",
    "sqlalchemy==1.3.24",
    "tornado===6.5.5",
]

[tool.uv.sources]
config-client = { path = "../../optscale_client/config_client" }
restapi-client = { path = "../../optscale_client/rest_api_client" }
auth-client = { path = "../../optscale_client/auth_client" }
optscale-exceptions = { path = "../../tools/optscale_exceptions" }
optscale-time = { path = "../../tools/optscale_time" }
katara-client = { path = "../../optscale_client/katara_client" }
check-alembic-down-revisions = { path = "../../tools/check_alembic_down_revisions" }

[dependency-groups]
dev = [
    "check-alembic-down-revisions",
    "concurrencytest==0.1.2",
    "coverage==4.2",
    "freezegun==0.3.8",
    "katara-client",
    "pycodestyle==2.11.1",
    "pylint==3.0.2",
]
[build-system]
requires = ["uv_build==0.8.15"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "../.."
module-name = "katara"
