[project]
name = "katara-worker"
version = "0.1.0"
requires-python = ">=3.12.11,<3.13"
dependencies = [
    "auth-client",
    "boto3==1.34.7",
    "config-client",
    "currency-symbols==2.0.3",
    "katara-client",
    "kombu==5.5.4",
    "optscale-time",
    "restapi-client",
]

[tool.uv.sources]
config-client = { path = "../../optscale_client/config_client" }
restapi-client = { path = "../../optscale_client/rest_api_client" }
auth-client = { path = "../../optscale_client/auth_client" }
katara-client = { path = "../../optscale_client/katara_client" }
optscale-time = { path = "../../tools/optscale_time" }

[dependency-groups]
dev = [
    "concurrencytest==0.1.2",
    "coverage==4.2",
    "freezegun==0.3.8",
    "pycodestyle==2.11.1",
    "pylint==3.0.2",
]
[build-system]
requires = ["uv_build==0.8.15"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "../.."
module-name = "katara"
