[project]
name = "metroculus-api"
version = "0.1.0"
requires-python = ">=3.12.11,<3.13"
dependencies = [
    "apispec==6.3.1",
    "clickhouse-connect==0.8.15",
    "cloud-adapter",
    "config-client",
    "optscale-exceptions",
    "pymongo==4.6.3",
    "pyyaml==6.0.1",
    "tornado===6.5.5",
]

[tool.uv.sources]
config-client = { path = "../../optscale_client/config_client" }
cloud-adapter = { path = "../../tools/cloud_adapter" }
optscale-exceptions = { path = "../../tools/optscale_exceptions" }
metroculus-client = { path = "../../optscale_client/metroculus_client" }

[dependency-groups]
dev = [
    "concurrencytest==0.1.2",
    "coverage==4.2",
    "metroculus-client",
    "pycodestyle==2.11.1",
    "pylint==3.0.2",
]
[build-system]
requires = ["uv_build==0.8.15"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "../.."
module-name = "metroculus"
