[project]
name = "metroculus-scheduler"
version = "0.1.0"
requires-python = ">=3.12.11,<3.13"
dependencies = ["config-client", "kombu==5.5.4", "restapi-client"]

[tool.uv.sources]
config-client = { path = "../../optscale_client/config_client" }
restapi-client = { path = "../../optscale_client/rest_api_client" }
metroculus-client = { path = "../../optscale_client/metroculus_client" }

[dependency-groups]
dev = [
    "concurrencytest==0.1.2",
    "coverage==4.2",
    "metroculus-client",
    "pycodestyle==2.11.1",
    "pylint==3.0.2",
]
[build-system]
requires = ["uv_build==0.8.15"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "../.."
module-name = "metroculus"
