[project]
name = "trapper-worker"
version = "0.1.0"
requires-python = ">=3.12.11,<3.13"
dependencies = [
    "clickhouse-connect==0.8.15",
    "cloud-adapter",
    "config-client",
    "kombu==5.5.4",
    "optscale-time",
    "pymongo==4.6.3",
    "restapi-client",
    "urllib3==2.5.0",
]

[tool.uv.sources]
restapi-client = { path = "../../optscale_client/rest_api_client" }
cloud-adapter = { path = "../../tools/cloud_adapter" }
config-client = { path = "../../optscale_client/config_client" }
optscale-time = { path = "../../tools/optscale_time" }

[dependency-groups]
dev = [
    "concurrencytest==0.1.2",
    "coverage==4.2",
    "pycodestyle==2.11.1",
    "pylint==3.0.2",
]
[build-system]
requires = ["uv_build==0.8.15"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "../.."
module-name = "trapper"
